--- a/public/ideafeed.html
+++ b/public/ideafeed.html
@@ -8,20 +8,29 @@
     /*This is the start of the CSS*/
 
     .idea-box {
-      background-color: #FFF0A5;
+      background-color: #fff;
       padding: 20px;
     }
 
     h1 {
       text-align: center;
-      color: #FFB03B;
+      color: #000;
     }
 
     h2 {
-      color: #468966;
+      color: #000;
       margin: 10px;
       padding: 10px;
-      border: 2px solid #FFB03B;
+      border: 1px solid #000;
+      border-radius: 5px;
+      text-align: center;
+    }
+
+    a {
+      color: #000;
+      margin: 10px;
+      padding: 10px;
+      border: 1px solid #000;
       border-radius: 5px;
       text-align: center;
     }
@@ -30,6 +39,16 @@
     </style>
   </head>
   <body>
+    <div id="navbar">
+    <ul>
+    <li><a href="ideafeed.html">Idea Feed</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="new.html">(New Page)</a></li>
+  	<li><a href="test.html">(Test)</a></li>
+  </ul>
+
+  </div> 
+
     <h1 class="title">Idea Feed</h1>
     <div class="idea-box">
     </div>
