--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
     </style>
   </head>
   <body>
+    <div id="navbar">
+    <ul>
+    <li><a href="ideafeed.html">Idea Feed</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="new.html">(New Page)</a></li>
+    <li><a href="test.html">(Test)</a></li>
+  </ul>
+
+  </div> 
       <h1>Welcome to my page</h1>
       <p>This is a paragraph.</p>
   </body>
