--- a/public/new.html
+++ b/public/new.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset='utf-8'>
   </head>
+  <div id="navbar">
+  <ul>
+  <li><a href="ideafeed.html">Idea Feed</a></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="new.html">(New Page)</a></li>
+  <li><a href="test.html">(Test)</a></li>
+</ul>
+
+</div> 
   <body>
      Hi i am a new page I guess
      not gonna brag  but i'm pretty cool
   </body>
 </html>
-  
