--- a/public/test.html
+++ b/public/test.html
@@ -4,6 +4,15 @@
     <meta charset='utf-8'>
   </head>
   <body>
+    <div id="navbar">
+    <ul>
+    <li><a href="ideafeed.html">Idea Feed</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="new.html">(New Page)</a></li>
+    <li><a href="test.html">(Test)</a></li>
+  </ul>
+
+  </div> 
       <form method="post" action="/ideas">
           <input type="text" name="idea" value="idea goes here">
           <input type="submit" value="Submit">
