--- a/public/ideafeed.html
+++ b/public/ideafeed.html
@@ -47,7 +47,7 @@
   	<li><a href="test.html">(Test)</a></li>
   </ul>
 
-  </div> 
+  </div>
 
     <h1 class="title">Idea Feed</h1>
     <div class="idea-box">
@@ -55,7 +55,7 @@
     <script>
 //Hello! This is the start of the JavaScript.
 
-var addIdea = function(idea) {
+var addIdea = function(idea.text) {
   var ideaElement = $('<h2>' + idea + '</h2>');
   $(".idea-box").append(ideaElement);
 
