external  style.css sheet made :)

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-    body {
-      color: purple;
-      background-color: orange;
-    }
-    </style>
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <div id="navbar">
