--- a/public/ideafeed.html
+++ b/public/ideafeed.html
@@ -4,39 +4,7 @@
     <meta charset='utf-8'>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <title>Idea Feed</title>
-    <style>
-    /*This is the start of the CSS*/
-
-    .idea-box {
-      background-color: #fff;
-      padding: 20px;
-    }
-
-    h1 {
-      text-align: center;
-      color: #000;
-    }
-
-    h2 {
-      color: #000;
-      margin: 10px;
-      padding: 10px;
-      border: 1px solid #000;
-      border-radius: 5px;
-      text-align: center;
-    }
-
-    a {
-      color: #000;
-      margin: 10px;
-      padding: 10px;
-      border: 1px solid #000;
-      border-radius: 5px;
-      text-align: center;
-    }
-
-    /*end of CSS */
-    </style>
+      <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <div id="navbar">
