--- a/public/test.html
+++ b/public/test.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
+  <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <div id="navbar">
@@ -12,7 +13,7 @@
     <li><a href="test.html">(Test)</a></li>
   </ul>
 
-  </div> 
+  </div>
       <form method="post" action="/ideas">
           <input type="text" name="idea" value="idea goes here">
           <input type="submit" value="Submit">
